ajout des calculs de taux de TP et TN

--- a/TP_Supervised.ipynb
+++ b/TP_Supervised.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "95a216a4",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "90ec8aa9",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fb108d33",
    "metadata": {
     "scrolled": true
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "acd12e86",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
       "\u001b[0;31mKeyError\u001b[0m: <class 'numpy.bool_'>",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, column \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(dataset\u001b[38;5;241m.\u001b[39mcolumns):\n\u001b[1;32m      8\u001b[0m     ax \u001b[38;5;241m=\u001b[39m axes\u001b[38;5;241m.\u001b[39mflatten()[i]\n\u001b[0;32m----> 9\u001b[0m     \u001b[43max\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhist\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumn\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbins\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mskyblue\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43medgecolor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mblack\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m     ax\u001b[38;5;241m.\u001b[39mset_title(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHistogramme de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolumn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m     ax\u001b[38;5;241m.\u001b[39mgrid(\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[5], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, column \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(dataset\u001b[38;5;241m.\u001b[39mcolumns):\n\u001b[1;32m      8\u001b[0m     ax \u001b[38;5;241m=\u001b[39m axes\u001b[38;5;241m.\u001b[39mflatten()[i]\n\u001b[0;32m----> 9\u001b[0m     \u001b[43max\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhist\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumn\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbins\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mskyblue\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43medgecolor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mblack\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m     ax\u001b[38;5;241m.\u001b[39mset_title(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHistogramme de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolumn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m     ax\u001b[38;5;241m.\u001b[39mgrid(\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
       "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/matplotlib/__init__.py:1442\u001b[0m, in \u001b[0;36m_preprocess_data.<locals>.inner\u001b[0;34m(ax, data, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1439\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m   1440\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minner\u001b[39m(ax, \u001b[38;5;241m*\u001b[39margs, data\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m   1441\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1442\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43max\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msanitize_sequence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1444\u001b[0m     bound \u001b[38;5;241m=\u001b[39m new_sig\u001b[38;5;241m.\u001b[39mbind(ax, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   1445\u001b[0m     auto_label \u001b[38;5;241m=\u001b[39m (bound\u001b[38;5;241m.\u001b[39marguments\u001b[38;5;241m.\u001b[39mget(label_namer)\n\u001b[1;32m   1446\u001b[0m                   \u001b[38;5;129;01mor\u001b[39;00m bound\u001b[38;5;241m.\u001b[39mkwargs\u001b[38;5;241m.\u001b[39mget(label_namer))\n",
       "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/matplotlib/axes/_axes.py:6790\u001b[0m, in \u001b[0;36mAxes.hist\u001b[0;34m(self, x, bins, range, density, weights, cumulative, bottom, histtype, align, orientation, rwidth, log, color, label, stacked, **kwargs)\u001b[0m\n\u001b[1;32m   6786\u001b[0m \u001b[38;5;66;03m# Loop through datasets\u001b[39;00m\n\u001b[1;32m   6787\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(nx):\n\u001b[1;32m   6788\u001b[0m     \u001b[38;5;66;03m# this will automatically overwrite bins,\u001b[39;00m\n\u001b[1;32m   6789\u001b[0m     \u001b[38;5;66;03m# so that each histogram uses the same bins\u001b[39;00m\n\u001b[0;32m-> 6790\u001b[0m     m, bins \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhistogram\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbins\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mw\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mhist_kwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   6791\u001b[0m     tops\u001b[38;5;241m.\u001b[39mappend(m)\n\u001b[1;32m   6792\u001b[0m tops \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(tops, \u001b[38;5;28mfloat\u001b[39m)  \u001b[38;5;66;03m# causes problems later if it's an int\u001b[39;00m\n",
       "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mhistogram\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "5c245125",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7bae93b2",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "5674aee6",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "acd92ada",
    "metadata": {},
    "outputs": [
@@ -1250,54 +1250,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Confusion matrix for SEX using SVM for value of 1:\n",
-      "[[944 180]\n",
-      " [410 509]]\n",
+      "TP : \n",
+      "{'1.0_SVM': 509, '2.0_SVM': 388, '1.0_Adaboost': 742, '2.0_Adaboost': 469, '1.0_GradientBoosting': 734, '2.0_GradientBoosting': 480, '1.0_RandomForest': 710, '2.0_RandomForest': 484}\n",
+      "TN : \n",
+      "{'1.0_SVM': 944, '2.0_SVM': 964, '1.0_Adaboost': 915, '2.0_Adaboost': 1060, '1.0_GradientBoosting': 923, '2.0_GradientBoosting': 1054, '1.0_RandomForest': 925, '2.0_RandomForest': 1044}\n",
+      "FP : \n",
+      "{'1.0_SVM': 180, '2.0_SVM': 238, '1.0_Adaboost': 209, '2.0_Adaboost': 142, '1.0_GradientBoosting': 201, '2.0_GradientBoosting': 148, '1.0_RandomForest': 199, '2.0_RandomForest': 158}\n",
+      "FN : \n",
+      "{'1.0_SVM': 410, '2.0_SVM': 281, '1.0_Adaboost': 177, '2.0_Adaboost': 200, '1.0_GradientBoosting': 185, '2.0_GradientBoosting': 189, '1.0_RandomForest': 209, '2.0_RandomForest': 185}\n",
       "\n",
-      "==================================================\n",
       "\n",
-      "Confusion matrix for SEX using SVM for value of 2:\n",
-      "[[964 238]\n",
-      " [281 388]]\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "Confusion matrix for SEX using Adaboost for value of 1:\n",
-      "[[915 209]\n",
-      " [177 742]]\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "Confusion matrix for SEX using Adaboost for value of 2:\n",
-      "[[1060  142]\n",
-      " [ 200  469]]\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "Confusion matrix for SEX using GradientBoosting for value of 1:\n",
-      "[[923 201]\n",
-      " [185 734]]\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "Confusion matrix for SEX using GradientBoosting for value of 2:\n",
-      "[[1054  148]\n",
-      " [ 189  480]]\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "Confusion matrix for SEX using RandomForest for value of 1:\n",
-      "[[932 192]\n",
-      " [206 713]]\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "Confusion matrix for SEX using RandomForest for value of 2:\n",
-      "[[1047  155]\n",
-      " [ 193  476]]\n",
-      "\n",
-      "==================================================\n",
-      "\n"
+      "Sensibilité : \n",
+      "{'1.0_SVM': 0.5538628944504896, '2.0_SVM': 0.5799701046337817, '1.0_Adaboost': 0.8073993471164309, '2.0_Adaboost': 0.7010463378176383, '1.0_GradientBoosting': 0.7986942328618063, '2.0_GradientBoosting': 0.7174887892376681, '1.0_RandomForest': 0.7725788900979326, '2.0_RandomForest': 0.7234678624813154}\n",
+      "Spécificité : \n",
+      "{'1.0_SVM': 0.8398576512455516, '2.0_SVM': 0.8019966722129783, '1.0_Adaboost': 0.8140569395017794, '2.0_Adaboost': 0.8818635607321131, '1.0_GradientBoosting': 0.8211743772241993, '2.0_GradientBoosting': 0.8768718801996672, '1.0_RandomForest': 0.8229537366548043, '2.0_RandomForest': 0.8685524126455907}\n"
      ]
     }
    ],
@@ -1312,6 +1278,12 @@
     "\n",
     "diff_valeur = features[feature].unique()\n",
     "\n",
+    "True_positive = {}\n",
+    "True_negative = {}\n",
+    "False_positive = {}\n",
+    "False_negative = {}\n",
+    "\n",
+    "\n",
     "for name, model in models:\n",
     "    for i in diff_valeur:\n",
     "        y_train_flattened = ravel(y_train)\n",
@@ -1321,10 +1293,41 @@
     "        y_pred = model_instance.predict(X_test)\n",
     "        mask = (X_test[feature] == i)\n",
     "        conf_matrix = confusion_matrix(y_test[mask], y_pred[mask])\n",
+    "        tn, fp, fn, tp = conf_matrix.ravel()\n",
+    "        key = f\"{i}_{name}\"\n",
+    "        True_positive[key] = tp\n",
+    "        True_negative[key] = tn\n",
+    "        False_positive[key] = fp\n",
+    "        False_negative[key] = fn\n",
     "        \n",
-    "        print(f\"Confusion matrix for {feature} using {name} for value of {int(i)}:\")\n",
-    "        print(conf_matrix)\n",
-    "        print(\"\\n\" + \"=\"*50 + \"\\n\")\n"
+    "        \n",
+    "        # print(f\"Confusion matrix for {feature} using {name} for value of {int(i)}:\")\n",
+    "        # print(conf_matrix)\n",
+    "        # print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "\n",
+    "print(\"TP : \")\n",
+    "print(True_positive)\n",
+    "print(\"TN : \")\n",
+    "print(True_negative)\n",
+    "print(\"FP : \")\n",
+    "print(False_positive)\n",
+    "print(\"FN : \")\n",
+    "print(False_negative)\n",
+    "\n",
+    "#Taux de True positive et de True negative\n",
+    "Taux_TP = {}\n",
+    "Taux_TN = {}\n",
+    "for k in True_positive.keys():\n",
+    "    Taux_TP[k] = True_positive[k]/(True_positive[k]+False_negative[k])\n",
+    "    Taux_TN[k] = True_negative[k]/(True_negative[k]+False_positive[k])\n",
+    "\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Sensibilité : \")\n",
+    "print(Taux_TP)\n",
+    "print(\"Spécificité : \")\n",
+    "print(Taux_TN)\n"
    ]
   },
   {
