finilisation du code

--- a/TP_Supervised.ipynb
+++ b/TP_Supervised.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "95a216a4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,8 @@
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.inspection import permutation_importance\n",
-    "from scipy.stats import pearsonr"
+    "from scipy.stats import pearsonr\n",
+    "from sklearn.multiclass import OneVsRestClassifier"
    ]
   },
   {
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5c245125",
    "metadata": {},
    "outputs": [],
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7bae93b2",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5674aee6",
    "metadata": {},
    "outputs": [
@@ -1237,12 +1238,12 @@
    "id": "36926633",
    "metadata": {},
    "source": [
-    "# Matrice de confusion de la feature 'SEX' pour les différents modèles"
+    "# Matrice de confusion et taux de True Postive, True negative de la feature 'SEX' pour les différents modèles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "acd92ada",
    "metadata": {},
    "outputs": [
@@ -1251,19 +1252,19 @@
      "output_type": "stream",
      "text": [
       "TP : \n",
-      "{'1.0_SVM': 509, '2.0_SVM': 388, '1.0_Adaboost': 742, '2.0_Adaboost': 469, '1.0_GradientBoosting': 734, '2.0_GradientBoosting': 480, '1.0_RandomForest': 710, '2.0_RandomForest': 484}\n",
+      "{'1.0_SVM': 509, '2.0_SVM': 388, '1.0_Adaboost': 742, '2.0_Adaboost': 469, '1.0_GradientBoosting': 734, '2.0_GradientBoosting': 480, '1.0_RandomForest': 708, '2.0_RandomForest': 482}\n",
       "TN : \n",
-      "{'1.0_SVM': 944, '2.0_SVM': 964, '1.0_Adaboost': 915, '2.0_Adaboost': 1060, '1.0_GradientBoosting': 923, '2.0_GradientBoosting': 1054, '1.0_RandomForest': 925, '2.0_RandomForest': 1044}\n",
+      "{'1.0_SVM': 944, '2.0_SVM': 964, '1.0_Adaboost': 915, '2.0_Adaboost': 1060, '1.0_GradientBoosting': 923, '2.0_GradientBoosting': 1054, '1.0_RandomForest': 933, '2.0_RandomForest': 1047}\n",
       "FP : \n",
-      "{'1.0_SVM': 180, '2.0_SVM': 238, '1.0_Adaboost': 209, '2.0_Adaboost': 142, '1.0_GradientBoosting': 201, '2.0_GradientBoosting': 148, '1.0_RandomForest': 199, '2.0_RandomForest': 158}\n",
+      "{'1.0_SVM': 180, '2.0_SVM': 238, '1.0_Adaboost': 209, '2.0_Adaboost': 142, '1.0_GradientBoosting': 201, '2.0_GradientBoosting': 148, '1.0_RandomForest': 191, '2.0_RandomForest': 155}\n",
       "FN : \n",
-      "{'1.0_SVM': 410, '2.0_SVM': 281, '1.0_Adaboost': 177, '2.0_Adaboost': 200, '1.0_GradientBoosting': 185, '2.0_GradientBoosting': 189, '1.0_RandomForest': 209, '2.0_RandomForest': 185}\n",
+      "{'1.0_SVM': 410, '2.0_SVM': 281, '1.0_Adaboost': 177, '2.0_Adaboost': 200, '1.0_GradientBoosting': 185, '2.0_GradientBoosting': 189, '1.0_RandomForest': 211, '2.0_RandomForest': 187}\n",
       "\n",
       "\n",
       "Sensibilité : \n",
-      "{'1.0_SVM': 0.5538628944504896, '2.0_SVM': 0.5799701046337817, '1.0_Adaboost': 0.8073993471164309, '2.0_Adaboost': 0.7010463378176383, '1.0_GradientBoosting': 0.7986942328618063, '2.0_GradientBoosting': 0.7174887892376681, '1.0_RandomForest': 0.7725788900979326, '2.0_RandomForest': 0.7234678624813154}\n",
+      "{'1.0_SVM': 0.5538628944504896, '2.0_SVM': 0.5799701046337817, '1.0_Adaboost': 0.8073993471164309, '2.0_Adaboost': 0.7010463378176383, '1.0_GradientBoosting': 0.7986942328618063, '2.0_GradientBoosting': 0.7174887892376681, '1.0_RandomForest': 0.7704026115342764, '2.0_RandomForest': 0.7204783258594918}\n",
       "Spécificité : \n",
-      "{'1.0_SVM': 0.8398576512455516, '2.0_SVM': 0.8019966722129783, '1.0_Adaboost': 0.8140569395017794, '2.0_Adaboost': 0.8818635607321131, '1.0_GradientBoosting': 0.8211743772241993, '2.0_GradientBoosting': 0.8768718801996672, '1.0_RandomForest': 0.8229537366548043, '2.0_RandomForest': 0.8685524126455907}\n"
+      "{'1.0_SVM': 0.8398576512455516, '2.0_SVM': 0.8019966722129783, '1.0_Adaboost': 0.8140569395017794, '2.0_Adaboost': 0.8818635607321131, '1.0_GradientBoosting': 0.8211743772241993, '2.0_GradientBoosting': 0.8768718801996672, '1.0_RandomForest': 0.8300711743772242, '2.0_RandomForest': 0.8710482529118136}\n"
      ]
     }
    ],
@@ -1278,10 +1279,10 @@
     "\n",
     "diff_valeur = features[feature].unique()\n",
     "\n",
-    "True_positive = {}\n",
-    "True_negative = {}\n",
-    "False_positive = {}\n",
-    "False_negative = {}\n",
+    "True_positive_SEX = {}\n",
+    "True_negative_SEX = {}\n",
+    "False_positive_SEX = {}\n",
+    "False_negative_SEX = {}\n",
     "\n",
     "\n",
     "for name, model in models:\n",
@@ -1295,10 +1296,10 @@
     "        conf_matrix = confusion_matrix(y_test[mask], y_pred[mask])\n",
     "        tn, fp, fn, tp = conf_matrix.ravel()\n",
     "        key = f\"{i}_{name}\"\n",
-    "        True_positive[key] = tp\n",
-    "        True_negative[key] = tn\n",
-    "        False_positive[key] = fp\n",
-    "        False_negative[key] = fn\n",
+    "        True_positive_SEX[key] = tp\n",
+    "        True_negative_SEX[key] = tn\n",
+    "        False_positive_SEX[key] = fp\n",
+    "        False_negative_SEX[key] = fn\n",
     "        \n",
     "        \n",
     "        # print(f\"Confusion matrix for {feature} using {name} for value of {int(i)}:\")\n",
@@ -1306,34 +1307,131 @@
     "        # print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
     "\n",
     "print(\"TP : \")\n",
-    "print(True_positive)\n",
+    "print(True_positive_SEX)\n",
     "print(\"TN : \")\n",
-    "print(True_negative)\n",
+    "print(True_negative_SEX)\n",
     "print(\"FP : \")\n",
-    "print(False_positive)\n",
+    "print(False_positive_SEX)\n",
     "print(\"FN : \")\n",
-    "print(False_negative)\n",
+    "print(False_negative_SEX)\n",
     "\n",
     "#Taux de True positive et de True negative\n",
-    "Taux_TP = {}\n",
-    "Taux_TN = {}\n",
-    "for k in True_positive.keys():\n",
-    "    Taux_TP[k] = True_positive[k]/(True_positive[k]+False_negative[k])\n",
-    "    Taux_TN[k] = True_negative[k]/(True_negative[k]+False_positive[k])\n",
+    "Taux_TP_SEX = {}\n",
+    "Taux_TN_SEX = {}\n",
+    "for k in True_positive_SEX.keys():\n",
+    "    Taux_TP_SEX[k] = True_positive_SEX[k]/(True_positive_SEX[k]+False_negative_SEX[k])\n",
+    "    Taux_TN_SEX[k] = True_negative_SEX[k]/(True_negative_SEX[k]+False_positive_SEX[k])\n",
     "\n",
     "\n",
     "print(\"\\n\")\n",
     "\n",
     "print(\"Sensibilité : \")\n",
-    "print(Taux_TP)\n",
+    "print(Taux_TP_SEX)\n",
     "print(\"Spécificité : \")\n",
-    "print(Taux_TN)\n"
+    "print(Taux_TN_SEX)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6087701",
+   "metadata": {},
+   "source": [
+    "# Matrice de confusion et taux de True Postive, True negative de la feature 'RAC1P' pour les différents modèles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "613c2d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TP : \n",
+      "{'4.0_SVM': 40, '4.0_Adaboost': 54, '4.0_GradientBoosting': 52}\n",
+      "TN : \n",
+      "{'4.0_SVM': 83, '4.0_Adaboost': 92, '4.0_GradientBoosting': 93}\n",
+      "FP : \n",
+      "{'4.0_SVM': 19, '4.0_Adaboost': 10, '4.0_GradientBoosting': 9}\n",
+      "FN : \n",
+      "{'4.0_SVM': 36, '4.0_Adaboost': 22, '4.0_GradientBoosting': 24}\n",
+      "\n",
+      "\n",
+      "Sensibilité : \n",
+      "{'4.0_SVM': 0.5263157894736842, '4.0_Adaboost': 0.7105263157894737, '4.0_GradientBoosting': 0.6842105263157895}\n",
+      "Spécificité : \n",
+      "{'4.0_SVM': 0.8137254901960784, '4.0_Adaboost': 0.9019607843137255, '4.0_GradientBoosting': 0.9117647058823529}\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = [\n",
+    "    (\"SVM\", SVC(C=10.0, kernel='rbf')),\n",
+    "    (\"Adaboost\", AdaBoostClassifier(learning_rate=1, n_estimators=200)),\n",
+    "    (\"GradientBoosting\", GradientBoostingClassifier(learning_rate=0.1, n_estimators=200)),\n",
+    "    (\"RandomForest\", RandomForestClassifier(max_depth=10, n_estimators=200))\n",
+    "]\n",
+    "feature = 'RAC1P'\n",
+    "\n",
+    "diff_values = [1,2,3,5,6,7,8,9]\n",
+    "\n",
+    "True_positive_Race = {}\n",
+    "True_negative_Race = {}\n",
+    "False_positive_Race = {}\n",
+    "False_negative_Race = {}\n",
+    "\n",
+    "\n",
+    "for name, model in models:\n",
+    "    for value in diff_values:\n",
+    "        if name != \"RandomForest\" and value != 5:\n",
+    "            y_train_flattened = ravel(y_train)\n",
+    "            model_instance = model\n",
+    "            model_instance.fit(X_train, y_train_flattened)\n",
+    "            \n",
+    "            y_pred = model_instance.predict(X_test)\n",
+    "            mask = (X_test[feature] == value)\n",
+    "            conf_matrix = confusion_matrix(y_test[mask], y_pred[mask])\n",
+    "            tn_R, fp_R, fn_R, tp_R = conf_matrix.ravel()\n",
+    "            key = f\"{i}_{name}\"\n",
+    "            True_positive_Race[key] = tp_R\n",
+    "            True_negative_Race[key] = tn_R\n",
+    "            False_positive_Race[key] = fp_R\n",
+    "            False_negative_Race[key] = fn_R\n",
+    "            # print(f\"Confusion matrix for {feature} using {name} for value of {value}:\")\n",
+    "            # print(conf_matrix)\n",
+    "            # print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "\n",
+    "print(\"TP : \")\n",
+    "print(True_positive_Race)\n",
+    "print(\"TN : \")\n",
+    "print(True_negative_Race)\n",
+    "print(\"FP : \")\n",
+    "print(False_positive_Race)\n",
+    "print(\"FN : \")\n",
+    "print(False_negative_Race)\n",
+    "\n",
+    "#Taux de True positive et de True negative\n",
+    "Taux_TP_Race = {}\n",
+    "Taux_TN_Race = {}\n",
+    "for k in True_positive_Race.keys():\n",
+    "    Taux_TP_Race[k] = True_positive_Race[k]/(True_positive_Race[k]+False_negative_Race[k])\n",
+    "    Taux_TN_Race[k] = True_negative_Race[k]/(True_negative_Race[k]+False_positive_Race[k])\n",
+    "\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Sensibilité : \")\n",
+    "print(Taux_TP_Race)\n",
+    "print(\"Spécificité : \")\n",
+    "print(Taux_TN_Race)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9a07d0e",
+   "id": "d5691661",
    "metadata": {},
    "outputs": [],
    "source": []
